# ways-of-working-data-science

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
fixtures/: malformed.csv  survey_csv.csv  survey_csv2.csv
src/wow/: cli.py  db_utils.py  demo_one.py  utils.py
tests/: test_db_utils.py  test_module_demo.py
tests/fixtures/: test_config_db.sqlite  test_config_multi_db.sqlite  test_delete_from_db.sqlite  test_update_db.sqlite  test_update_db2.sqlite  test_write_db.sqlite
