[metadata]
# This is required for any package to install with a name
name = wow
# If you want to publish on PyPI then the following are also required
# https://daveshawley.medium.com/safely-using-setup-cfg-for-metadata-1babbe54c108
# Either (author and author_email) or (maintainer and maintainer_email) must be supplied
url = 
author = 
author_email = 
# This is useful but not required
version = 

# If you are using the "src" layout then we need the following
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[options]
package_dir=
    =src
packages=find:

# Discussion of the use of install_require vs requirements.txt
# https://packaging.python.org/en/latest/discussions/install-requires-vs-requirements/
# Arguable the requirements.txt should pin a specific version (?)
# install_requires are installed during `pip install -e .` requirements.txt are installed
# explicitly using the command `pip install -r requirements.txt`
install_requires =

[options.packages.find]
where=src

# Entry_points are documented here:
# https://setuptools.pypa.io/en/latest/userguide/entry_point.html
[options.entry_points]
console_scripts =
        cli-demo = wow.cli:cli_group

[flake8]
max-line-length = 100
